# algo

./: .coverage  .pre-commit-config.yaml  README.md  lcm.js  main.py  mise.toml  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  mypy-pr.yml  pylint-pr.yml  pylint.yml
components/: divisor.py  id.py  total2.py
components/chap1/: alternative.py  divisor.py  id.py  lb.py  ref.py  total1.py  total2.py  triangle.py
components/chap2/: conv.py  prime.py  primes.py
components/chap3/: binary_search.py  chaining.py  open_addressing.py  sentinel.py
components/chap4/: fixed_stack.py  fixed_stack_by_deque.py  queue.py
components/chap5/: branching.py  factorial.py  hanoi.py  memoization.py
components/chap5/eight_queen_problem/: bounding.py  branching.py  eight_queen.py
notes/chapters/chapter_05_recursion/: README.md
src/algo/: __init__.py
src/algo/chapters/: __init__.py
src/algo/chapters/chapter_01_basics/: __init__.py  alternative.py  divisor.py  id.py  lb.py  ref.py  total1.py  total2.py  triangle.py
src/algo/chapters/chapter_02_complexity_primes/: __init__.py  conv.py  primes.py
src/algo/chapters/chapter_03_search_hash/: __init__.py  binary_search.py  node.py
src/algo/chapters/chapter_04_stacks_queues/: __init__.py  fixed_stack_by_deque.py  queue.py
src/algo/chapters/chapter_05_recursion/: __init__.py  factorial.py  hanoi.py  memoization.py  recursive.py
src/algo/chapters/chapter_06_sorting/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_smoke.py
tests/chapter_01/: test_divisor.py  test_lb.py  test_total1.py  test_triangle.py
tests/chapter_02/: test_conv.py  test_prime.py  test_primes.py
tests/chapter_03/: test_binary_search.py  test_chaining.py  test_open_addressing.py  test_sentinel.py
tests/chapter_04/: test_fixed_stack.py  test_fixed_stack_by_deque.py  test_queue.py
tests/chapter_05/: test_bounding.py  test_eight_queen.py  test_factorial.py  test_hanoi.py  test_memoization.py  test_recursive.py
tests/chapter_06/: test_countingsort.py  test_heapsort.py  test_mergesort.py  test_quicksort.py  test_sort.py
(+10 files in other folders)
