[project]
dependencies = []
description = "algorithms and data structures practice"
name = "algo"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pre-commit>=4.3.0",
  "pylint>=4.0.5",
  "ruff>=0.15.4",
]
