[project]
dependencies = []
description = "algorithms and data structures practice"
name = "algo"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py314"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "PL"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.pyright]
include = ["src", "main.py"]
exclude = ["**/__pycache__", ".venv", "build", "dist"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
extraPaths = ["src"]

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pyright>=1.1",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.0",
  "ruff>=0.15.4",
]
